added title and meta

--- a/index.html
+++ b/index.html
@@ -7,12 +7,9 @@
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   <link rel='stylesheet' href='media/css/reset.css' />
   <link rel='stylesheet' href='media/css/main.css' />
-  <title>Sarah and James are getting married in  Napa</title>
-  <meta name='description' content='Sarah and James are getting married! In Napa!'></meta>
+  <title>Web Development and Design | 12th Street Software</title>
+  <meta name='description' content='Web Development and Design'></meta>
 
-    <meta property="fb:admins" content="" />
-    <meta property="og:site_name" content="sarahjamesnapa.com" />
-    <meta property="og:title" content="Sarah and James are getting married in  Napa" />
 
 
     <!-- Google Site Verification -->
