--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@ _gaq.push(['_trackPageLoadTime']);
 </head>
 <body>
 <section class="homeSlide">
-  <h1><span>12th</span> Street Software Inc.</h1>
-  <h3>Get in touch <a href='mailto:hello@12thstreetsoftware.com'>hello@12thstreetsoftware.com</a></h3>
+  <div class='container'>
+    <h1><span>12th</span> Street Software Inc.</h1>
+    <h3>511 Avenue of the Americas, #206</h3>
+    <h3>New York, NY 1011-8436</h3>
+    <h3><a href='mailto:hello@12thstreetsoftware.com'>hello@12thstreetsoftware.com</a></h3>
+    <h3><a href='mailto:hello@12thstreetsoftware.com'>(267) 307 7087</a></h3>
+  </div>
 </section>
 </body>
 <script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
